Dragging and packing issue about new blank image #42008

Closed
opened 2014-09-29 14:27:33 +02:00 by Leon Cheung · 5 comments
Member

System Information
Win8 64bit | GTX680

Blender Version
Broken: 2.72 21825c4

Short description of error
Dragging issue: Dragging new colored blank Image from image editor to other editors (such as Compositor), color will lost and reset to black.

Packing issue: New colored blank image cannot be packed into .blend file, unless being saved external image first. However, the Color grid and UV grid images can be packed without saving in advance.

Exact steps for others to reproduce the error
Step for dragging issue:

  1. Open default scene, switch to Compositing layout, click New button on UV/Image editor header to create a blank image, set a non-black color, say blue.
  2. Toggle Use node on Comositor header, then drag the image from UV/Image Editor directly to the Compositor area to quickly add a image node, the image will then turn to black.

Step for packing issue:

  1. Go to UV/Image Editor, create a new blank image with a color, say blue.
  2. File - External Data - Pack All into .blend
  3. Reopen the saved file, blue turns to black, while Color grid and UV grid can.
**System Information** Win8 64bit | GTX680 **Blender Version** Broken: 2.72 21825c4 **Short description of error** Dragging issue: Dragging new colored blank Image from image editor to other editors (such as Compositor), color will lost and reset to black. Packing issue: New colored blank image cannot be packed into .blend file, unless being saved external image first. However, the Color grid and UV grid images can be packed without saving in advance. **Exact steps for others to reproduce the error** Step for dragging issue: 1. Open default scene, switch to Compositing layout, click **New** button on UV/Image editor header to create a blank image, set a non-black color, say blue. 2. Toggle Use node on Comositor header, then drag the image from UV/Image Editor directly to the Compositor area to quickly add a image node, the image will then turn to black. Step for packing issue: 1. Go to UV/Image Editor, create a new blank image with a color, say blue. 2. File - External Data - Pack All into .blend 3. Reopen the saved file, blue turns to black, while Color grid and UV grid can.
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @ZhangYu

Added subscriber: @ZhangYu

This issue was referenced by 617131410c

This issue was referenced by 617131410c74bc0291ede50803e5d9badff2a0c9

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 617131410c.

Closed by commit 617131410c.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#42008
No description provided.